# gsim

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  Makefile  README.md  flake.nix  newtop.fst  newtop.fst.hier
.github/ISSUE_TEMPLATE/: 1-bug_report.yml
.github/workflows/: build-release.yml  ci.yml
docs/: GSIM-Graph.md  firrtl-6-upgrade-notes.md
emu/: difftest-NutShell.cpp  difftest-boom.cpp  difftest-gcd.cpp  difftest-rocketchip.cpp  difftest-rv32e.cpp  difftest-xiangshan.cpp  difftest-ysyx3.cpp  difftest.cpp  emu-NutShell.cpp  emu-checkpoint.cpp  emu-ysyx6.cpp  emu.cpp  gsim_fst_impl.cpp  simadd.cpp  simaddreg.cpp
emu-src/: functions.cpp  functions.h  uint.cpp  uint.h
emu/include/: SInt.h  UInt.h
emu/lib/: uint.cpp  uint.h
emu/obj_2023_10_11/: top_ref.cpp  top_ref.h
emu/obj_2023_10_4/: top_ref.cpp  top_ref.h
emu/obj_2023_9_18/: top_ref.cpp  top_ref.h
emu/support/: compress.cpp  compress.h
include/: CIRCT2Graph.h  ExpTree.h  Node.h  StmtTree.h  common.h  config.h  debug.h  graph.h  gsimFst.h  opFuncs.h  splitNode.h  util.h  valInfo.h
mk/: toolchain.mk
parser/: PNode.cpp  lexical.l  plib.cpp  syntax.y  traversal.cpp
parser/include/: PNode.h  Parser.h
ready-to-run/: DifftestMemInitializer.v  ExampleComb.fir  ExampleGCD.fir  Exp1AllTest.hi.fir  Exp2AllTest.hi.fir  Exp3AllTest.hi.fir  Exp4AllTest.hi.fir  Exp5AllTest.hi.fir  Exp6AllTest.hi.fir  Exp7AllTest.hi.fir  Exp8AllTest.hi.fir  SdCard.v  SimTop-nutshell.fir  SimTop.fir  SimTop.hi.fir  SimTop.v  TransExcep.v  UpdateRegs.v  newtop.hi.fir  newtop.lo.fir  newtop.v  ysyx6.hi.fir  ysyx6.v
ready-to-run/difftest/: SimTop-nutshell.sv  newtop-ysyx3.sv
ready-to-run/difftest/blockbox/: InstFinish.v  UpdateCsrs.v
ready-to-run/large-boom-chirrtl/: TestHarness-LargeBoom.anno.json
ready-to-run/rocket-chirrtl/: TestHarness.anno.json
ready-to-run/small-boom-chirrtl/: TestHarness-SmallBoom.anno.json
ready-to-run/test/: chirrtl.hi.fir  dpic.hi.fir  firrrtl.mem.hi.fir  infer.hi.fir
ready-to-run/test/memory/: chirrtl.cmem.hi.fir  firrtl.cmem.hi.fir
ready-to-run/ysyx3-chirrtl/: newtop.fir
scala/: Makefile  build.sc
scala/add/src/: add.scala  addreg.scala  addtop.scala
scala/gcd/src/: Elaborate.scala
scripts/: activeCount.sh  countPrefix.sh  diff-graph.py  explore-supernode-size.sh  extract_perf_result.py  genReference.sh  genSigDiff.py  init_resctrl.sh  partition.py  perf_l3.py  regression.sh  run_until_exit.sh  sigFilter.py  speedup.py
scripts/perf/: mem_bw_counters.sh  perf-gsim.sh  perf-xs.sh
src/: .patternDetect.cpp.swp  AST2Graph.cpp  CIRCT2Graph.cpp  ENode.cpp  ExpTree.cpp  GraphDumper.cpp  MFFCPartition.cpp  Node.cpp  StmtTree.cpp  aliasAnalysis.cpp  clockOptimize.cpp  commonExpr.cpp  constantNode.cpp  cppEmitter.cpp  deadNodes.cpp  exprOpt.cpp  firParser.cpp  generator.cpp  graph.cpp  graphPartition.cpp  inferWidth.cpp  instsGenerator.cpp  loopDetector.cpp  main.cpp  mergeArray.cpp  mergeNodes.cpp  mergeRegister.cpp  mergeWhen.cpp  opFuncs.cpp  parallelize.cpp  patternDetect.cpp  perfAnalysis.cpp  ramdomGraph.cpp  replication.cpp  resetAnalysis.cpp  splitArray.cpp  splitNodes.cpp  superNode.cpp  topoSort.cpp  traversal.cpp  (+2 more)
test/: README.md  repro-usefulreset.fir
